{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 52,
  "lineage": "0e05a13c-b6a5-f0ff-f1c5-cc07d9e3e212",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5ef8a7d1f335595",
            "arn": "arn:aws:ec2:us-east-2:759912403559:elastic-ip/eipalloc-0a5ef8a7d1f335595",
            "association_id": "eipassoc-08ac1596df8dc6886",
            "domain": "vpc",
            "id": "eipalloc-0a5ef8a7d1f335595",
            "instance": "i-0e9ad216a85e3c3e5",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0826efe01fa7bf791",
            "private_dns": "ip-10-0-0-233.us-east-2.compute.internal",
            "private_ip": "10.0.0.233",
            "public_dns": "ec2-3-139-177-32.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.177.32",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-master-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-master-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b91ba87f411152e6",
            "arn": "arn:aws:ec2:us-east-2:759912403559:elastic-ip/eipalloc-0b91ba87f411152e6",
            "association_id": "eipassoc-00befe8c7fedd9e6c",
            "domain": "vpc",
            "id": "eipalloc-0b91ba87f411152e6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08803b781d7d428b4",
            "private_dns": "ip-10-0-0-145.us-east-2.compute.internal",
            "private_ip": "10.0.0.145",
            "public_dns": "ec2-3-150-255-61.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.255.61",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0611dd377055177a9",
            "arn": "arn:aws:ec2:us-east-2:759912403559:instance/i-0e9ad216a85e3c3e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9ad216a85e3c3e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "tech-challenge1-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0826efe01fa7bf791",
            "private_dns": "ip-10-0-0-233.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.233",
            "public_dns": "ec2-18-224-45-227.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.45.227",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:759912403559:key/10f68e92-f286-4542-be53-165def76a2c3",
                "throughput": 125,
                "volume_id": "vol-09f63228236798087",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ce95c4cb3ed1574",
            "tags": {
              "Environment": "production",
              "Name": "Jenkins Master",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Jenkins Master",
              "Project": "devops-challenge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041dee8b1f8973175"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:internet-gateway/igw-0f4f82e31c37e28a5",
            "id": "igw-0f4f82e31c37e28a5",
            "owner_id": "759912403559",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-igw"
            },
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:loadbalancer/app/devops-challenge-alb/95a941f3a8cd7f37",
            "arn_suffix": "app/devops-challenge-alb/95a941f3a8cd7f37",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-challenge-alb-1141213317.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:759912403559:loadbalancer/app/devops-challenge-alb/95a941f3a8cd7f37",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-challenge-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0ca057db9a6f81713"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ee25029d547ab0f"
              },
              {
                "subnet_id": "subnet-09ce95c4cb3ed1574"
              }
            ],
            "subnets": [
              "subnet-04ee25029d547ab0f",
              "subnet-09ce95c4cb3ed1574"
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-alb"
            },
            "vpc_id": "vpc-070486c178ada0f50",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:listener/app/devops-challenge-alb/95a941f3a8cd7f37/604507e61834179c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:targetgroup/devops-challenge-frontend-tg/816efa9e9fcd8697",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:759912403559:listener/app/devops-challenge-alb/95a941f3a8cd7f37/604507e61834179c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:loadbalancer/app/devops-challenge-alb/95a941f3a8cd7f37",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:targetgroup/devops-challenge-backend-tg/39b401f6532e494a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:listener-rule/app/devops-challenge-alb/95a941f3a8cd7f37/604507e61834179c/bdc41862b29a1968",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:759912403559:listener-rule/app/devops-challenge-alb/95a941f3a8cd7f37/604507e61834179c/bdc41862b29a1968",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:listener/app/devops-challenge-alb/95a941f3a8cd7f37/604507e61834179c",
            "priority": 100,
            "region": "us-east-2",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:targetgroup/devops-challenge-backend-tg/39b401f6532e494a",
            "arn_suffix": "targetgroup/devops-challenge-backend-tg/39b401f6532e494a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:759912403559:targetgroup/devops-challenge-backend-tg/39b401f6532e494a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:759912403559:loadbalancer/app/devops-challenge-alb/95a941f3a8cd7f37"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-challenge-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-backend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:759912403559:targetgroup/devops-challenge-frontend-tg/816efa9e9fcd8697",
            "arn_suffix": "targetgroup/devops-challenge-frontend-tg/816efa9e9fcd8697",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:759912403559:targetgroup/devops-challenge-frontend-tg/816efa9e9fcd8697",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:759912403559:loadbalancer/app/devops-challenge-alb/95a941f3a8cd7f37"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-challenge-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b91ba87f411152e6",
            "association_id": "eipassoc-00befe8c7fedd9e6c",
            "connectivity_type": "public",
            "id": "nat-0f9940dd505bac1da",
            "network_interface_id": "eni-08803b781d7d428b4",
            "private_ip": "10.0.0.145",
            "public_ip": "3.150.255.61",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ce95c4cb3ed1574",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:route-table/rtb-0db7bd81dcab76e1e",
            "id": "rtb-0db7bd81dcab76e1e",
            "owner_id": "759912403559",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9940dd505bac1da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:route-table/rtb-0ee2a98c0748e88b8",
            "id": "rtb-0ee2a98c0748e88b8",
            "owner_id": "759912403559",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4f82e31c37e28a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a86e990d52fedc54",
            "region": "us-east-2",
            "route_table_id": "rtb-0db7bd81dcab76e1e",
            "subnet_id": "subnet-0dfb0dd40d6c044c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aef3312fe1033f19",
            "region": "us-east-2",
            "route_table_id": "rtb-0db7bd81dcab76e1e",
            "subnet_id": "subnet-06a51b4eb4462e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3fc94270d2ffb0e",
            "region": "us-east-2",
            "route_table_id": "rtb-0ee2a98c0748e88b8",
            "subnet_id": "subnet-09ce95c4cb3ed1574"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1a4ff0835925742",
            "region": "us-east-2",
            "route_table_id": "rtb-0ee2a98c0748e88b8",
            "subnet_id": "subnet-04ee25029d547ab0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:security-group/sg-0ca057db9a6f81713",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca057db9a6f81713",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-challenge-alb-sg",
            "name_prefix": "",
            "owner_id": "759912403559",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:security-group/sg-0905e7f2ac34f33ed",
            "description": "Security group for backend ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0905e7f2ac34f33ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca057db9a6f81713"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031d7497634aec398"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "devops-challenge-backend-sg",
            "name_prefix": "",
            "owner_id": "759912403559",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-backend-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:security-group/sg-031d7497634aec398",
            "description": "Security group for frontend ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031d7497634aec398",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca057db9a6f81713"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-challenge-frontend-sg",
            "name_prefix": "",
            "owner_id": "759912403559",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:security-group/sg-041dee8b1f8973175",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041dee8b1f8973175",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-challenge-jenkins-sg",
            "name_prefix": "",
            "owner_id": "759912403559",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:subnet/subnet-0dfb0dd40d6c044c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb0dd40d6c044c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759912403559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-1"
            },
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:subnet/subnet-06a51b4eb4462e3ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a51b4eb4462e3ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759912403559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-2"
            },
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:subnet/subnet-09ce95c4cb3ed1574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce95c4cb3ed1574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "759912403559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-1"
            },
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:subnet/subnet-04ee25029d547ab0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee25029d547ab0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "759912403559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-2"
            },
            "vpc_id": "vpc-070486c178ada0f50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:759912403559:vpc/vpc-070486c178ada0f50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fe05dfc837519d4",
            "default_route_table_id": "rtb-0809113aa4bcb1ef8",
            "default_security_group_id": "sg-022842154503aa705",
            "dhcp_options_id": "dopt-0d68543e45f202a36",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070486c178ada0f50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0809113aa4bcb1ef8",
            "owner_id": "759912403559",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}